02_Hands-on/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: splash
spec:
  replicas: 5
  selector:
    matchLabels:
      app: splash
  template:
    metadata:
      labels:
        app: splash
    spec:
      containers:
      - name: webapp
        image: jitsehijlkema/ilionx-webapp
