02_Hands-on/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  namespace: splash
  labels:
    app: splash
spec:
  containers:
  - name: webapp
    image: jitsehijlkema/ilionx-webapp
