02_Hands-on/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ...
  namespace: ...
spec:
  selector:
    app: ...
  ports:
  - port: ...
    protocol: ...
    targetPort: ...
  type: ...
